Update on Overleaf.

--- a/review.tex
+++ b/review.tex
@@ -206,22 +206,27 @@ The morphogenesis of past human settlements viewed from Thom's Catastrophe Theor
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
-\subsection*{Social Sciences and Psychology}
-
-Morphogenesis has been sparsely used as a useful metaphor to understand different processes in Social Sciences and various psychological fields. For example, in Developmental Psychology one can think of the relation to evolution of human cultural behavior and learning, epigenetic neural systems, and their influence on neural development and behavior throughout life , and in Clinical psychology and psychopathology we have analogies in the emergent of psychical structures and the self-organization of forms of relation with the self and the other, and of course in Neuroscience we have a plethora of morphogenetic phenomena related to  the structure of the neural nets and “hardware” of the brain.
-
-In social psychology we have remarkable examples like the morphogenetic approach proposed by Margaret Archer applied to the problem of structure and agency, in other words, how we both shape society and are shaped by it in a dynamic interplay. Thus the morphogenetic approach offers a new understanding of social change and of the subject within it.  
-
-Nonetheless, more than a systematic consensus in it’s usage, there is a common perception of it’s explanatory power to grasp notions that show remarkable morphogenetic concordance.
-
-For example, it’s usage in the field of Psychoanalysis has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the self organization in the symptom. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing we can argue that it has been most widely used after the sixties in relation to the morphogenetic qualities of the structuration of the drive theory (for example the article Instinct Theory in the Light of Microbiology, Therese Benedek, M.D. ~\cite{benedek1973instinct}), and moreover thanks to the ideas of René Thom on Structural Stability and Morphogenesis.
+\subsection*{Social Science and Psychology}
 
 
+Morphogenesis has been occasionally used as a suitable metaphor to understand different processes in social science and various psychological fields. For example, in developmental psychology one can think of the relation to evolution of human cultural behavior and learning, epigenetic neural systems, and their influence on neural development and behavior throughout life \cite{hart_held_2013}. In Clinical Psychology and Psychopathology, analogies are used for the emergence of psychical structures and the self-organization of forms of relation with the self and the Other. Additionally, “psychological morphogenesis” is akin to the outcome of the complexity of psychological dynamics undergoing creative emergence. Therefore, in “successful” psychotherapy this generation of novelty would be fostered \cite{piers_self-organizing_2007}. Moreover, in the field of neuroscience there are a plethora of morphogenetic phenomena related to the structure of the brain, dendritic morphogenesis and neural nets being some remarkable examples.\cite{_issues_2013}
+
+In social psychology we have noteworthy illustrations like the morphogenetic approach proposed by Margaret Archer as applied to the problem of structure and agency, that is, how we both shape society and are shaped by it in a dynamic interplay \cite{archer_margaret_1999}. Thus the morphogenetic approach offers a new understanding of social change and of the subject within it.  
+
+Furthermore, its application to the field of psychoanalysis has been evoked as early as 1918 to understand the formation of psychical structures and their dynamics, the pervasive repetition of early development, and the symptom’s self-organization, or the relation to the morphogenetic qualities of drive theory \cite{benedek1973instinct}. After an extensive review on the available bibliography contained in the database Psychoanalytic Electronic Publishing, it emerges that morphogenesis has come to be mainly used after the sixties, and moreover thanks to the spreading of the ideas of René Thom on Structural Stability and Morphogenesis \cite{de_luca_picione_processes_2016}, undoubtedly thanks to Lacanian discourse and it’s movement towards topology \cite{nasio_five_1998}. 
+
+Nonetheless, more than a systematic and widespread unity throughout these different fields, we encounter multiple uses that are sometimes discontinuous, and one could argue that morphogenesis’s utility could be more tangible on an epistemological level. This would consist of a shared perception of morphogenesis’s descriptive power to further understand the emergence and structure of various phenomena.
+
+Sidenote on Autopoiesis
+
+It is interesting to note that Varela and Maturana’s theory of autopoiesis in biology, from which they develop an observer-dependent interpretation of cognition, language, and consciousness, had a constructive epistemological impact on social science, philosophy and psychology, even if sometimes latent. For example, an application in sociology can be found in Niklas Luhmann's Systems Theory. His generalized view of autopoiesis conceptualizes systems as self-producing, not in terms of their physical components, but in terms of their organization, which can be measured in terms of information and complexity\cite{gershenson_requisite_2014}. These views provide insight on the interpenetration between social and psychical systems. In Luhmann's theory, the 'human being' is not conceptualized as forming a systemic unity, but instead is understood as a conglomerate of organic and psychical systems, with language being the most important evolutionary achievement for the coupling of social and psychical systems. Language is thus a social phenomenon, yet thought processes are structured in a complementary way to language, as thoughts are broken down into chunks of sentences and words. \cite{seidl_luhmanns_2004}
+
+We could further assess the epistemological significance of this if we consider the conception of the subject as dynamic and recursive, thus in a movement that can interact with its environment. This stance stems away from classically static conceptions of the human psyche, and echoes some contemporary clinical approaches in psychology and psychoanalysis. One concept that clearly illustrates this is Pichon Riviere’s  notion of ECRO (Schema Conceptual Referential and Operative), as the working processes which constitute the tools from which the subjects mental operations flow\cite{pichon_riviere_processus_2004}. Thus, autopoiesis could be viewed as a necessary but insufficient condition for cognition\cite{bitbol_autopoiesis_2004}.Moreover, the interpenetration of the psychological and the social and the importance of language points us in the direction of psychoanalytical theory and clinical practice, with Jacques Lacan’s views on linguistics and the big Other as well as Sigmund Freud’s psychoanalytic anthropology that emphasizes the links between the neurotic patient’s symptom and sociocultural phenomena \cite{freud_totem_1989}. Finally, the philosopher and lacanian psychoanalyst Slavoj Žižek, in his discussion of Hegel argues that: "Hegel is – to use today's terms – the ultimate thinker of autopoiesis, of the process of the emergence of necessary features out of chaotic contingency, the thinker of contingency's gradual self-organization, of the gradual rise of order out of chaos."\cite{zizek_less_2013}
 
 
 % discussion with Mario : morphogenesis of ideas as qualitative emergence ?
 
-% not sure exactly psychology, but found paper using the notion of "social morphogenesis" to explain the emergence of different cultures
+% not sure exactly psychology, but found paper using the notion of "social morphogenesis" to explain the emergence of different cultures..thanks! I'llcheck it out but did not have time now to include it yet
 \cite{straus1977societal}
 % socio-psychology
 
