Update on Overleaf.

--- a/review.tex
+++ b/review.tex
@@ -95,7 +95,8 @@ The rest of this paper is organized as follows : we provide first a compartmenta
 %What methods are applied?
 %Examples?
 %Can we identify areas in which morphogenesis is not used (e.g. only chemistry is looked at, forces ignored, etc?)?
-% Rough order: General definition of morphogenesis. 
+% Rough order: General definition of morphogenesis in dev bio. 
+% 
 %Be more broad about general aspects of morphogenesis in biology, then narrow down to some specifics we know a lot about 
 %
 %Organoids: we can reproduce a great deal of morphogenesis, but still don't understand everything, Sato&Clevers
