--- a/biblio.bib
+++ b/biblio.bib
@@ -2,6 +2,38 @@
 
 
 
+
+@article{2015arXiv150707878C,
+	Author = {{Cottineau}, C. and {Hatna}, E. and {Arcaute}, E. and {Batty}, M.},
+	Journal = {ArXiv e-prints},
+	Month = jul,
+	Title = {{Paradoxical Interpretations of Urban Scaling Laws}},
+	Year = 2015}
+
+
+
+@book{holland2012signals,
+	Author = {Holland, John H},
+	Publisher = {Mit Press},
+	Title = {Signals and boundaries: Building blocks for complex adaptive systems},
+	Year = {2012}}
+
+
+
+@article{west1997general,
+  title={A general model for the origin of allometric scaling laws in biology},
+  author={West, Geoffrey B and Brown, James H and Enquist, Brian J},
+  journal={Science},
+  volume={276},
+  number={5309},
+  pages={122--126},
+  year={1997},
+  publisher={American Association for the Advancement of Science}
+}
+
+
+
+
 @article{whitehand1999urban,
 	Author = {Whitehand, JWR and Morton, NJ and Carr, CMH},
 	Journal = {Environment and Planning B: Planning and Design},
@@ -57,17 +89,6 @@
 	Volume = {13},
 	Year = {2010}}
 
-
-
-@article{benedek1973instinct,
-  title={The instinct theory in the light of microbiology},
-  author={Benedek, Therese},
-  journal={Annual of Psychoanalysis},
-  volume={1},
-  pages={53--72},
-  year={1973},
-  publisher={Routledge Mental Health, Taylor and Francis Group}
-}
 
 
 
