--- a/review.tex
+++ b/review.tex
@@ -38,13 +38,15 @@
 
 
 \title{An Interdisciplinary Approach to Morphogenesis}
-% alternative epic title : Morphogenesis : a Tale of Life and Death
+
+
 
 \author[1]{Chenling Antelope}
 \author[2]{Lars Hubatsch}
 \author[3]{Juste Raimbault}
 \author[4]{Jesus Mario Serna}
-% E. Crosato : Emanuele may contribute later but does not want to be in 
+
+
 
 \affil[1]{Affiliation, department, city, postcode, country}
 \affil[2]{Affiliation, department, city, postcode, country}
@@ -59,13 +61,19 @@
 
 %\date{July 6th, 2016}
 
-%\keywords{Keyword1, Keyword2, Keyword3}
+
 
 %\maketitle
 
 
 \begin{abstract}
 The notion of morphogenesis seems to play an important role in the study of a broad range of complex systems. If the concept was introduced in embryology to design growth of organisms, it was rapidly used in various fields, e.g. urbanism, geomorphology and even psychology. However, the use of the concept seems generally fuzzy and to have a field-specific definition for each use. We propose in this paper an epistemological study, starting with a broad interdisciplinary review and extracting essential notions linked to morphogenesis across fields. It allows to build a consistent general meta-framework for morphogenesis. Further work may include concrete application of the framework on particular cases to operate interdisciplinary transfers of concepts, and quantitative text analysis to strengthen qualitative results.
+
+
+\medskip
+
+\textbf{Keywords : }Complex Systems, Morphogenesis, Applied Epistemology, Interdisciplinarity
+
 \end{abstract}
 
 
@@ -312,14 +320,11 @@ We list here important concepts that come out from this review, and from which a
 
 \begin{itemize}
 \item \textbf{Self-organisation} : Morphogenesis implies self-organisation but the contrary is not necessarily true, some aspects are specific of morphogenesis, such as the presence of functions resulting from the form.
-% there is not the self-replicating part (autopoiesis - life ?)
-% no because more precise. bounadries ?
 \item \textbf{Patterns and shape} : The ``formation of shapes'' seems to be common to all approaches to morphogenesis.
 \item \textbf{Embryogenesis / tissue modeling} In biology, typical processes of morphogenesis are generally observed at early stages of life, during empryogenesis, including the initial formation of tissues.
 \item \textbf{Apoptosis} Morphogenesis is often related to life (see section on autopoiesis), but also to death : the programmed death of cells, apostosis, can in some cases be a part of morphogenetic processes.
 \item \textbf{Qualitative vs Quantitative} Qualitative bifurcations are a fundamental concept in morphogenesis : e.g. differentiation of organs in biology ; emergence of differentiated urban functions
 \item \textbf{Symmetry} Symmetry breaking occurs, mostly at early stages, but also at all stages of morphogenesis.
-%\item \textbf{Death} - in relation with life ? (read philo on that)
 \item \textbf{Unit and Scale} Are systems top-down or bottom-up designed, self-organized or exhibiting architecture ? Both are not necessarily incompatible, fundamental units and scales playing a crucial role in defining morphogenesis. Fractal-like systems, such as corals (collaborating tissues) or cities, but also the self and the society, can be studied from the point of view of morphogenetic processes at different levels.
 \item \textbf{Boundaries} Boundaries are a major aspect in Complex Adaptive systems (see e.g. Holland's approach as \emph{Signals and Boundaries}~\cite{holland2012signals}). Morphogenesis can imply clear boundaries (of an embryo e.g.) but not necessarily (social organisms, cities for which the definition of boundaries is still an open question~\cite{2015arXiv150707878C}).
 \item \textbf{Relation between Form and Function} Causal relations between form and function are at the center of emerging architecture.
