--- a/review.tex
+++ b/review.tex
@@ -43,16 +43,16 @@
 
 \author[1]{Chenling Antelope}
 \author[2]{Lars Hubatsch}
-\author[3]{Juste Raimbault}
-\author[4]{Jesus Mario Serna}
+\author[3,4]{Juste Raimbault}
+\author[5]{Jesus Mario Serna}
 
 
 
 \affil[1]{Affiliation, department, city, postcode, country}
 \affil[2]{Affiliation, department, city, postcode, country}
-\affil[3]{Affiliation, department, city, postcode, country}
-\affil[4]{Affiliation, department, city, postcode, country}
-
+\affil[3]{UMR CNRS 8504 G{\'e}ographie-cit{\'e}s, Paris, France}
+\affil[4]{UMR-T 9403 IFSTTAR LVMT, Champs-sur-Marne, France}
+\affil[5]{Affiliation, department, city, postcode, country}
 
 \affil[*]{corresponding.author@email.example}
 
